@@ -141,6 +141,8 @@ Extension Modules
 
 - Build using system ffi library on arm*-linux*.
 
+- Bug #1372: zlibmodule.c: int overflow in PyZlib_decompress
+
 
 Documentation
 -------------
